[package]
name = "sa-model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dynomite = { git = "https://github.com/sdd/dynomite", branch="aws-sdk-dynamodb-support" }
dynomite-derive = { git = "https://github.com/sdd/dynomite", branch="aws-sdk-dynamodb-support" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
